--- a/submit/prj4-sol/README
+++ b/submit/prj4-sol/README
@@ -1,6 +1,5 @@
-Name:		XXX
-B-Number:	XXX
-Email:		XXX
+Name:		Vivek Reddy Chenreddy
+B-Number:	B00859293
+Email:		vchenre1@binghamton.edu
 
-Add text here as needed.
-
+This is the project4 submission of Programming for web.
